--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Avatar Section -->
         <div class="section">
             <div class="avatar">
-                <img src="img/Avatar.jpg" alt="Avatar" width="300">
+                <img src="img/avatar.jpg" alt="Avatar" width="300">
             </div>
             <h2>Olá, eu sou gabriel</h2>
             <p>Bem-vindo ao meu portfólio pessoal!</p>
